# piano-precision

./: .gitignore  CITATION  COMPILE.md  README.md  meson.build  piano-precision.desktop  piano-precision.qrc  repoint  repoint-lock.json  repoint-project.json  repoint.sml  sonic-visualiser.qrc
.github/workflows/: linux.yml  macos.yml
deploy/: clean-build-and-package  clean-build-and-package.bat  metadata.ps1  metadata.sh
deploy/cross/: macos-arm64.txt  macos-x86_64.txt
deploy/macos/: Info.plist  copy-qt.sh  copy-scores.sh  deploy-and-package.sh  deploy.sh  notarize.sh  paths.sh  sign.sh
deploy/win64/: build-32.bat  build-64.bat  build-and-package.bat  generate-wxs.ps1  package.ps1  wxs.in
icons/: piano-precision-macicon.icns  piano-precision.rc
main/: MainWindow.cpp  MainWindow.h  NetworkPermissionTester.cpp  OSCHandler.cpp  PreferencesDialog.cpp  ScoreAlignmentTransform.cpp  ScoreAlignmentTransform.h  ScoreElement.h  ScoreFinder.cpp  ScoreFinder.h  ScoreParser.cpp  ScoreParser.h  ScorePositionReader.cpp  ScorePositionReader.h  ScoreWidget.cpp  ScoreWidget.h  ScoreWidgetBase.h  ScoreWidgetMEI.cpp  ScoreWidgetMEI.h  ScoreWidgetPDF.cpp  ScoreWidgetPDF.h  Session.cpp  Session.h  Surveyer.cpp  main.cpp  segfault.c  vrvtrim.cpp  vrvtrim.h
misc/fake-git-commit-header/: git_commit.h
verovio-replace/include/vrv/: timemap.h  toolkit.h
verovio-replace/src/: calcdotsfunctor.cpp  midifunctor.cpp  timemap.cpp  toolkit.cpp
